--- a/JCashMachineThailand/Views/Home/Index.cshtml
+++ b/JCashMachineThailand/Views/Home/Index.cshtml
@@ -3,13 +3,12 @@
 }
 <section id="indexBody">
     <!-- parallax baground-->
-    <div class="background-parallax">
-        <div class="container headerBox">
-            <h1 id="company-name" class="headerText">
-                J-Cash Machine(Thailand)<br />
-                <span class="subHeaderText">A Global Solutions by JCM</span>
-            </h1>
-        </div>
+    <div id="bg-parallax" class="background-parallax"></div>
+    <div class="container headerBox">
+        <h1 id="company-name" class="headerText">
+            J-Cash Machine(Thailand)<br />
+            <span class="subHeaderText color-jcm-blue">A Global Solutions by JCM</span>
+        </h1>
     </div>
     <!--################-->
     <div class="container-fluid text-center bg-jcm-blue">
@@ -32,34 +31,34 @@
             <div class="row p-0 m-0">
                 <div class="col-md-4 w-100">
                     <div id="product" class="card border-0 h-100">
-                        <img class="card-img" src="~/Images/bg.jpg" />
+                        <img class="card-img" src="~/Images/product.jpg" />
                         <div class="card-body">
                             <h3 class="card-title color-jcm-blue mb-3">Product</h3>
                             <h5 class="card-subtitle mb-3">subtitle</h5>
                             <p class="card-text">You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-                            <p><a class="btn btn-info" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+                            <span class="nav-item">@Html.ActionLink("Check out!", "Product", "Home", new { @class = "btn btn-info" })</span>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div id="service" class="card border-0 h-100">
-                        <img class="card-img" src="~/Images/bg.jpg" />
+                        <img class="card-img" src="~/Images/service.jpg" />
                         <div class="card-body">
                             <h3 class="card-title color-jcm-blue mb-3">Service</h3>
                             <h5 class="card-subtitle mb-3">subtitle</h5>
                             <p class="card-text">You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-                            <p><a class="btn btn-info" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+                            <span class="nav-item">@Html.ActionLink("See more", "Service", "Home", new { @class = "btn btn-info" })</span>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div id="career" class="card border-0 h-100">
-                        <img class="card-img" src="~/Images/bg.jpg" />
+                        <img class="card-img" src="~/Images/Career.jpg" />
                         <div class="card-body">
                             <h3 class="card-title color-jcm-blue mb-3">Career</h3>
                             <h5 class="card-subtitle mb-3">subtitle</h5>
                             <p class="card-text">You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-                            <p><a class="btn btn-info" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+                            <span class="nav-item">@Html.ActionLink("Join us", "Career", "Home", new { @class = "btn btn-info" })</span>
                         </div>
                     </div>
                 </div>
@@ -126,9 +125,9 @@
             var isView = isAnyPartOfElementInViewport(featureSect);
             $('#fix-box').html(isView);
             if (isView) {
-                $("#product").show(300,);
-                $("#service").delay(200).show(300);
-                $("#career").delay(500).show(300);
+                $("#product").show(500);
+                $("#service").show(1000);//200+400
+                $("#career").show(1500);//500+400
             }
         });
     });
@@ -145,6 +144,16 @@
         const horInView = (rect.left <= windowWidth) && ((rect.left + rect.width) >= 0);
 
         return (vertInView && horInView);
+    }
+
+    window.onscroll = function () { scrollFunction() };
+    function scrollFunction() {
+
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+            document.getElementById("bg-parallax").style.backgroundPositionY = "-6rem";
+        } else {
+            document.getElementById("bg-parallax").style.backgroundPositionY = "0";
+        }
     }
 </script>
 }
