--- a/JCashMachineThailand/Views/Shared/_Layout.cshtml
+++ b/JCashMachineThailand/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title | JCM Thailand</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link rel="shortcut icon" href="~/Images/JCM-Global-logo.ico" />
     <link rel="stylesheet" type="text/css" href="~/Content/custom.layout.css" />
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 
