--- a/JCashMachineThailand/Content/custom.index.css
+++ b/JCashMachineThailand/Content/custom.index.css
@@ -16,13 +16,14 @@
 
 .headerBox {
     margin-left: 8%;
-    width: 520px;
+    width: 80vw; /*520px*/
+    max-width:960px;
     position: absolute;
     pointer-events: none;
     top: 200px;
     /*height: 200px;*/
     word-wrap: break-word;
-    text-align: start;
+    text-align: left;
     padding-top: 1em;
 }
 
@@ -61,9 +62,9 @@
         font-size:48px;
         /*color:red;*/
     }
-    .headerBox{
+    /*.headerBox{
         width:320px;
-    }
+    }*/
     .background-parallax {
         height: 300px;
     }
@@ -82,7 +83,7 @@
         font-size: 16px;
     }
     .headerBox {
-        width: 260px;
+        /*width: 260px;*/
         top: 160px;
     }
     .background-parallax {
@@ -99,7 +100,7 @@
         font-size: 11px;
     }
     .headerBox {
-        width: 260px;
+        /*width: 260px;*/
     }
     .background-parallax{
         height:180px;
@@ -113,7 +114,7 @@
         /*color: chartreuse;*/
     }
     .headerBox {
-        width: 260px;
+        /*width: 260px;*/
         top:160px;
     }
     .background-parallax {
@@ -135,7 +136,7 @@
 .bg-jcm-blue {
     background-color: #003862;
 }
-.color-jcm-blue { /*#003862*/
+.color-jcm-blue { /*JCM from .Ai = #005DA3*/
     color: #003862;
     /*color:blue;*/
 }
@@ -185,8 +186,6 @@
 }
 #feature{
     min-height:500px;
-    /*display:none;*/
-    transition-duration:0.5s;
 }
 
 #product, #service, #career {
