--- a/JCashMachineThailand/Views/Home/Index.cshtml
+++ b/JCashMachineThailand/Views/Home/Index.cshtml
@@ -3,13 +3,15 @@
 }
 <section id="indexBody">
     <!-- parallax baground-->
-    <div id="bg-parallax" class="background-parallax"></div>
-    <div class="container headerBox">
-        <h1 id="company-name" class="headerText">
-            J-Cash Machine (Thailand)<br />
-            <span class="subHeaderText color-jcm-blue">A Global Solutions by JCM</span>
-        </h1>
+    <div id="bg-parallax" class="background-parallax">
+        <div class="container headerBox">
+            <h1 id="company-name" class="headerText">
+                J-Cash Machine (Thailand)<br />
+                <span class="subHeaderText color-jcm-blue">A Global Solutions by JCM</span>
+            </h1>
+        </div>
     </div>
+
     <!--################-->
     <div class="container-fluid text-center bg-jcm-blue">
         <!-- Compary Introduction Section -->
