--- a/JCashMachineThailand/Views/Shared/_Layout.cshtml
+++ b/JCashMachineThailand/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-md navbar-light bg-white">
         <!-- ::Brand -->
         <!-- <a class="navbar-brand" href="/Home/About">[ JCM-Thailand ]</a> -->
-        <a class="navbar-brand" href="/Home/About">
+        <a class="navbar-brand" href="/Home/Index">
             <img src="~/Images/JCM_Global_RGB - email signature.png" />
         </a>
         <!-- ::Toggler/collapsibe Button -->
@@ -26,9 +26,20 @@
         </button>
         <!-- ::Navbar links -->
         <div class="collapse navbar-collapse" id="navMenu">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ml-auto mr-1">
                 <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", null, new { @class = "nav-link" })</li>
-                <li class="nav-item">@Html.ActionLink("About", "About", "Home", null, new { @class = "nav-link" })</li>
+                <li class="nav-item">@Html.ActionLink("Product", "Products", "Details", null, new { @class = "nav-link" })</li>
+
+                <li class="nav-item dropdown ">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">
+                        <span class="caret">About</span>
+                    </a>
+                    <ul class="dropdown-menu border-0 bg-light pl-4">
+                        <li><a class="dropdown-item">@Html.ActionLink("Company", "About", "Home", null, new { @class = "nav-link" })</a></li>
+                        <li><a class="dropdown-item">@Html.ActionLink("Career", "Career", "Details", null, new { @class = "nav-link" })</a></li>
+                        <li><a class="dropdown-item">@Html.ActionLink("Service", "Service", "Details", null, new { @class = "nav-link" })</a></li>
+                    </ul>
+                </li>
                 <li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "nav-link" })</li>
             </ul>
         </div>
